--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,8 +25,9 @@
       </mat-card>
     </div>
 
+
     <div class="container">
-      <h2>In progress</h2>
+      <h2>In Progress</h2>
 
       <mat-card
         cdkDropList
